--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <video controls width="800">
-    <source src="movie.mp4" type="StarCitizen20260122">
+    <source src="StarCitizen20260122" type="StarCitizen20260122">
     Your browser does not support the video tag.
   </video>
 </body>
